@@ -43,7 +43,7 @@
 <br>
 <h2 align=center>CD</h2>
 The CD object represents a CDROM drive and allows you to
-access the CD inside that drive. All functions (except get_name())
+access the CD inside that drive. All functions (except get_name() and get_id())
 require the CD object to be initialized. This is done with the
 CD.init() function.
 <br>&nbsp;<br>
